# vosd

./: .gitignore  COPYING  configure.ac
src/: Makefile.am  log.cpp  log.h  main.cpp
src/alsa/: Makefile.am  alsa.cpp  alsa.h  alsa_card.cpp  alsa_card.h  alsa_mixer.cpp  alsa_mixer.h
